--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <h1>Hari's Portfolio</h1>
     <p><strong>Aspiring Data Analyst</strong> | Skilled in Excel, SQL, Power BI</p>
     
+    <!-- Add this -->
+    <h2>💼 Projects</h2>
+
     <h2>🛒 Retail Sales Dashboard Project</h2>
     <p>Built using Excel (data cleaning), SQL (querying), and Power BI (dashboard)</p>
     <p><a href="https://github.com/HariChandana72005/retails-sales-dashboard" target="_blank">🔗 View Project on GitHub</a></p>
